--- a/dejatools.com/contactus.html
+++ b/dejatools.com/contactus.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><script src="//archive.org/includes/analytics.js?v=cf34f82" type="text/javascript"></script>
-<script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app222.us.archive.org';v.server_ms=209;archive_analytics.send_pageview({});});</script>
-<script type="text/javascript" src="/_static/js/bundle-playback.js?v=1WaXNDFE" charset="utf-8"></script>
-<script type="text/javascript" src="/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-<script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-<script type="text/javascript" src="/_static/js/ruffle.js"></script>
-<script type="text/javascript">
-  __wm.init("/web");
-  __wm.wombat("https://arsscriptum.github.io/dejatools.com/contactus","20191218083856","/","web","/_static/",
-	      "1576658336");
-</script>
-<link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=S1zqJCYt" />
-<link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=qtvMKcIJ" />
-<!-- End Wayback Rewrite JS Include -->
+<head>
 
 <title>Contact Us</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -40,22 +27,22 @@
             
             <h3>Address</h3>
             <p>
-                Deja Tools, LLC<br/>
-                9737 Great Hills Trail<br/>
-                Suite 355<br/>
-                Austin, Texas 78759<br/>
-                USA
+                Ars Scriptum, LLC<br/>
+                19 Bienville<br/>
+                App 1<br/>
+                Levis, Quebec, G6V 2L3<br/>
+                Canada
             </p>
 
             <h3 style="margin-top:2em;">Sales &amp; Licensing</h3>
             <p>
-                Sales: <a href="mailto:sales@dejatools.com">sales@dejatools.com</a>
+                Sales: <a href="mailto:guillaumeplante.qc@gmail.com">guillaumeplante.qc@gmail.com</a>
             </p>
        
             <h3 style="margin-top:2em;">Support</h3>
             <p>
-                Technical support: <a href="mailto:guillaumeplante.qc@gmail.com">support@dejatools.com</a><br/>
-                Website support: <a href="mailto:guillaumeplante.qc@gmail.com">webmaster@dejatools.com</a>
+                Technical support: <a href="mailto:guillaumeplante.qc@gmail.com">guillaumeplante.qc@gmail.com</a><br/>
+                Website support: <a href="mailto:guillaumeplante.qc@gmail.com">guillaumeplante.qc@gmail.com</a>
             </p>
 
         </div>
@@ -84,11 +71,28 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30QDMELB71"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-27KVTZT9BP');
+
+  gtag("event", "dejatools", {
+    page_title: "contact"
+  });
+</script>
+
+
+
 </body></html>
 <!--
      FILE ARCHIVED ON 08:38:56 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:02:57 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:36 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -96,13 +100,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 133.054 (11)
-  exclusion.robots: 0.202
-  exclusion.robots.policy: 0.192
-  cdx.remote: 0.068
-  esindex: 0.009
-  LoadShardBlock: 76.719 (3)
-  PetaboxLoader3.datanode: 100.617 (4)
-  load_resource: 72.763
-  PetaboxLoader3.resolve: 31.202
+  captures_list: 118.4 (11)
+  exclusion.robots: 0.19
+  exclusion.robots.policy: 0.18
+  cdx.remote: 0.058
+  esindex: 0.01
+  LoadShardBlock: 51.842 (3)
+  PetaboxLoader3.datanode: 60.783 (4)
+  load_resource: 166.457
+  PetaboxLoader3.resolve: 153.614
 -->
