--- a/dejatools.com/pricingandlicensing.html
+++ b/dejatools.com/pricingandlicensing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
 <title>Pricing &amp; Licensing</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link href="https://arsscriptum.github.io/dejatools.com/css/DejaTools.css" rel="stylesheet" type="text/css"/>
@@ -22,7 +23,7 @@
         <div class="Content">
 
             <h3>Evaluation License</h3>
-            <p>A fully functional Deja Insight evaluation license is available. To request your license please contact: <div style="color:#333;"><a href="mailto:sales@dejatools.com">sales@dejatools.com</a></div><br/></p>
+            <p>A fully functional Deja Insight evaluation license is available. To request your license please contact: <div style="color:#333;"><a href="mailto:guillaumeplante.qc@gmail.com">guillaumeplante.qc@gmail.com</a></div><br/></p>
 
         </div>
 
@@ -50,11 +51,27 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30QDMELB71"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-27KVTZT9BP');
+
+  gtag("event", "dejatools", {
+    page_title: "prices"
+  });
+</script>
+
+
 </body></html>
 <!--
      FILE ARCHIVED ON 13:01:36 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:03:00 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:41 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -62,13 +79,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 83.705 (11)
-  exclusion.robots: 0.202
-  exclusion.robots.policy: 0.191
-  cdx.remote: 0.068
-  esindex: 0.011
-  LoadShardBlock: 49.702 (3)
-  PetaboxLoader3.datanode: 76.491 (4)
-  load_resource: 90.75
-  PetaboxLoader3.resolve: 37.967
+  captures_list: 153.954 (11)
+  exclusion.robots: 0.17
+  exclusion.robots.policy: 0.162
+  cdx.remote: 0.056
+  esindex: 0.009
+  LoadShardBlock: 124.891 (3)
+  PetaboxLoader3.datanode: 80.642 (4)
+  PetaboxLoader3.resolve: 85.695 (2)
+  load_resource: 72.57
 -->
