--- a/dejatools.com/about.html
+++ b/dejatools.com/about.html
@@ -30,14 +30,12 @@
                 <p>Today, Deja is continuing to push the envelope with Insight v2.0. With a host of new and incredible features that will allow software development companies to learn more about their code and processes than ever before, Deja Tools is quickly becoming the leader in modern age tools development.</p>
                 <p>Deja Tools, LLC. is a privately held company headquartered in Austin, Texas.</p>
 
-                <h3 style="margin-top:2em;">Craig Galley - Director of Technology</h3>
-                <p>As Director of Technology and cofounder, Craig brings over 20 years of technical development and leadership experience to Deja Tools along with a passion for creating software development tools.</p>
-                <p>Prior to founding Deja Tools in 2006, Craig was CTO and cofounder of Inevitable Entertainment where he was responsible for the operation of the technical department. Craig started developing video games and development tools in 1985 while still in school. After a brief detour spent developing flight simulators for the defense department he returned to video games in 1994 joining Iguana Entertainment as a Programmer and later Technical Director. He has also held the positions of Executive Technical Director and Vice President of Technology for Acclaim Entertainment.</p>
-                <p>Craig has worked on over 30 titles and developed for most of the major gaming platforms.</p>
+                <h3 style="margin-top:2em;">Guillaume Plante - Director of Technology</h3>
+                <p>As Director of Technology and cofounder, Guillaume brings over 20 years of technical development and leadership experience to Deja Tools along with a passion for creating software development tools.</p>
+                <p>Prior to founding Deja Tools in 2006, Guillaume was CTO and cofounder of Inevitable Entertainment where he was responsible for the operation of the technical department. Guillaume started developing video games and development tools in 1985 while still in school. After a brief detour spent developing flight simulators for the defense department he returned to video games in 1994 joining Iguana Entertainment as a Programmer and later Technical Director. He has also held the positions of Executive Technical Director and Vice President of Technology for Acclaim Entertainment.</p>
+                <p>Guillaume has worked on over 30 titles and developed for most of the major gaming platforms.</p>
                 
-                <h3 style="margin-top:2em;">D. Michael Traub - Director of Technology</h3>
-                <p>Sharing the roles of Directory of Technology and Deja Tools cofounder, Michael brings over 15 years of software engineering experience including 10 years within the video game industry working specifically on tools development.</p>
-                <p>Before entering the video game industry, Michael served in a variety of roles, including teaching undergraduate classes at New York Institute of Technology while completing a Master of Science degree in computer sciences, database engine programming at Computer Associates, and embedded systems programming at Questra Consulting.  In 1996, Michael joined Iguana Entertainment’s recently formed Tools and Technology department.  When Inevitable Entertainment was formed, Michael signed on where he held a Director position for the Online Technology Department and later the Advanced Technology Group.</p>
+
             </div>
         </div>
 
@@ -65,11 +63,28 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30QDMELB71"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-27KVTZT9BP');
+
+  gtag("event", "dejatools", {
+    page_title: "about"
+  });
+</script>
+
+
+
 </body></html>
 <!--
      FILE ARCHIVED ON 13:01:31 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:02:56 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:34 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -77,13 +92,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 119.643 (11)
-  exclusion.robots: 0.203
-  exclusion.robots.policy: 0.194
-  cdx.remote: 0.081
-  esindex: 0.013
-  LoadShardBlock: 90.595 (3)
-  PetaboxLoader3.resolve: 80.484 (2)
-  PetaboxLoader3.datanode: 50.41 (4)
-  load_resource: 81.711
+  captures_list: 256.015 (11)
+  exclusion.robots: 0.249
+  exclusion.robots.policy: 0.237
+  cdx.remote: 0.067
+  esindex: 0.011
+  LoadShardBlock: 221.925 (3)
+  PetaboxLoader3.datanode: 191.723 (4)
+  load_resource: 126.983
+  PetaboxLoader3.resolve: 84.196
 -->
