--- a/dejatools.com/copyright.html
+++ b/dejatools.com/copyright.html
@@ -60,11 +60,30 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30QDMELB71"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-27KVTZT9BP');
+
+  gtag("event", "dejatools", {
+    page_title: "copyright"
+  });
+</script>
+
+
+
+
 </body></html>
 <!--
      FILE ARCHIVED ON 08:39:01 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:02:58 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:39 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -72,13 +91,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 429.469 (11)
-  exclusion.robots: 0.164
-  exclusion.robots.policy: 0.155
+  captures_list: 2013.653 (11)
+  exclusion.robots: 0.181
+  exclusion.robots.policy: 0.173
   cdx.remote: 0.055
-  esindex: 0.01
-  LoadShardBlock: 215.546 (3)
-  PetaboxLoader3.datanode: 178.166 (4)
-  PetaboxLoader3.resolve: 89.207 (2)
-  load_resource: 89.38
+  esindex: 0.009
+  LoadShardBlock: 1990.331 (3)
+  PetaboxLoader3.datanode: 1909.679 (4)
+  load_resource: 793.058
+  PetaboxLoader3.resolve: 722.189
 -->
