--- a/dejatools.com/dejainsight.html
+++ b/dejatools.com/dejainsight.html
@@ -166,11 +166,11 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
 </body></html>
 <!--
      FILE ARCHIVED ON 08:39:17 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:02:59 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:40 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -178,13 +178,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 108.926 (11)
-  exclusion.robots: 0.166
-  exclusion.robots.policy: 0.157
-  cdx.remote: 0.059
-  esindex: 0.009
-  LoadShardBlock: 80.523 (3)
-  PetaboxLoader3.datanode: 80.861 (4)
-  load_resource: 192.737
-  PetaboxLoader3.resolve: 144.1
+  captures_list: 164.948 (11)
+  exclusion.robots: 0.159
+  exclusion.robots.policy: 0.149
+  cdx.remote: 0.057
+  esindex: 0.01
+  LoadShardBlock: 132.373 (3)
+  PetaboxLoader3.datanode: 143.919 (4)
+  load_resource: 94.601
+  PetaboxLoader3.resolve: 65.105
 -->
