--- a/dejatools.com/index.html
+++ b/dejatools.com/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
 <title>Deja Tools</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link href="https://arsscriptum.github.io/dejatools.com/css/DejaTools.css" rel="stylesheet" type="text/css"/>
@@ -39,7 +40,7 @@
             <p>Deja Insight represents the next generation of game development tools. It pulls together key features of logging tools, debuggers, and profilers to provide you with the tools you need to debug and optimize today's complex real-time systems.</p>
             <p><script type="text/javascript">var fadeimages2=new Array();fadeimages2[0]=["/images/Screenshot250-1.jpg","/dejainsight",""];fadeimages2[1]=["/images/Screenshot250-2.jpg","/dejainsight",""];new fadeshow(fadeimages2, 250, 133, 0, 6000, 0);</script></p>
             <p>Insight provides unparalleled data capture, analysis and visualization tools that enable developers to fully inspect the operation of their systems in real-time.</p><p class="RightLink"><a href="https://arsscriptum.github.io/dejatools.com/dejainsight"><span style="font-size:110%;">LEARN MORE &gt;&gt;</span></a></p>
-            <p class="RightLink"><a href="mailto:sales@dejatools.com">REQUEST AN EVALUATION &gt;&gt;</a></p>
+            <p class="RightLink"><a href="mailto:guillaumeplante.qc@gmail.com">REQUEST AN EVALUATION &gt;&gt;</a></p>
         </div>
 
         <div class="ClearFloat"/>
@@ -58,11 +59,29 @@
 <!--- End Page -->
 </div></div></div></div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct="G-6YV8KPRSWQ";urchinTracker();</script>
+<script type="text/javascript">_uacct="G-27KVTZT9BP";urchinTracker();</script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30QDMELB71"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-27KVTZT9BP');
+
+  gtag("event", "dejatools", {
+    page_title: "main"
+  });
+</script>
+
+
+
 </body></html>
 <!--
      FILE ARCHIVED ON 08:38:51 Dec 18, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:03:01 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:44 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -70,13 +89,13 @@
 -->
 <!--
 playback timings (ms):
-  captures_list: 327.879 (11)
-  exclusion.robots: 0.242
-  exclusion.robots.policy: 0.228
-  cdx.remote: 0.083
+  captures_list: 1107.154 (11)
+  exclusion.robots: 0.213
+  exclusion.robots.policy: 0.201
+  cdx.remote: 0.072
   esindex: 0.011
-  LoadShardBlock: 224.809 (3)
-  PetaboxLoader3.datanode: 70.893 (4)
-  PetaboxLoader3.resolve: 196.026 (3)
-  load_resource: 97.613
+  LoadShardBlock: 1066.347 (3)
+  PetaboxLoader3.datanode: 1001.76 (4)
+  PetaboxLoader3.resolve: 313.99 (2)
+  load_resource: 294.545
 -->
