--- a/dejatools.com/pricingandlicensing.html
+++ b/dejatools.com/pricingandlicensing.html
@@ -22,9 +22,16 @@
         <!-- Content Column container -->
         <div class="Content">
 
-            <h3>Evaluation License</h3>
-            <p>A fully functional Deja Insight evaluation license is available. To request your license please contact: <div style="color:#333;"><a href="mailto:guillaumeplante.qc@gmail.com">guillaumeplante.qc@gmail.com</a></div><br/></p>
+            <h3>Development Package Ready</h3>
+            <p>A fully functional Deja Insight development package along with the license and the log management app is available for download here: <div style="color:#333;"><a href="https://arsscriptum.github.io/files/deja/DejaInsight.SDK.zip.aes">DejaInsight.SDK.zip.aes</a></div><br/></p>
 
+			<h4>Instructions for unpacking. The file is encrypted.</h4>
+            <ul class="Instructions">
+                <li>Download the file</li>
+                <li>Decrypt with AES to Zip file, using the <div style="color:#333;"><a href="https://github.com/arsscriptum/Win32.AesCrypt.Console">Win32.AesCrypt.Console</a></div> compiled exe.</li>
+                <li><div style="color:#555;">AesCryptConsole.exe -d ".\DejaInsight.SDK.zip.aes"</div></li>
+                <li>After the file is decrypted, it will be in a zip format. You need to expand the archive on your development drive, using the second password.</li>
+            </ul>
         </div>
 
         <!-- Side Nav -->
