--- a/stats.html
+++ b/stats.html
@@ -30,7 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 </head>
 <body>
-stats
 
+<table table border="2" bgcolor="#00ff00"><thead><tr align="center"><th><strong>Num</strong></th><th><strong>Error ID</strong></th><th><strong>Title</strong></th><th>Frequency</th><th><strong>Code</strong></th><th><strong>Description</strong></th></tr></thead><tbody><tr><td>Error: 1/3</td><td>No.: 10786 0x2A22</td><td>Tank level, correlation</td><td>frequency: 1</td><td>P144B</td><td>Fuel level / Fuel consumption - correlation error</td></tr><tr><td>Error: 2/3</td><td>No.: 11068 0x2B3C</td><td>DMTL, system error</td><td>frequency: 1</td><td>P1434</td><td>Tank Leakage Diagnostic Module (DM-TL) - Malfunction</td></tr><tr><td>Error: 3/3</td><td>No.: 11066 0x2B3A</td><td>DMTL, system error</td><td>frequency: 5</td><td>P1449</td><td>Tank leakage diagnostic module (DM-TL) - pump current too high</td></tr></tbody></table>
 </body>
 </html>
