--- a/welcome.html
+++ b/welcome.html
@@ -40,9 +40,8 @@
         <h1><span class="typed"></span></h1>
         <p>Guillaume Plante, Developer.</p>
         <ul class="list-unstyled list-social">
-		  <li><a href="https://github.com/arsscriptum" target="_blank"><i class="ion-social-github"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/planteguillaume/" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
-          <li><a href="assets_v1/files/CV_Guillaume-Plante-FR-2021.pdf" target="_blank"><i class="ion-toggle-filled"></i></a></li>
+		      <li><a href="https://github.com/arsscriptum" target="_blank"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.mobygames.com/person/94859/guillaume-plante/" target="_blank"><i class="ion-toggle-filled"></i></a></li>
           <li><a href="assets_v1/files/TeamViewerQS.exe" target="_blank"><i class="ion-person-stalker"></i></a></li>
       </div>
     </div>
